# axi4lite_reg_generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ghdl  Dockerfile.verilator  README.md  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: ci.yml
axi4lite_reg_generator/: __init__.py  __main__.py  axi4_lite_reg_generator.py  filters.py  regdef.py  schema.py  validate.py
axi4lite_reg_generator/templates/: axi4lite_template.sv  axi4lite_template.v  axi4lite_template.vhd  doc.md
example/inputs/: example.json
example/outputs/: example.md  example.sv  example.v  example.vhd
test/: Makefile  __init__.py  test_argparse.py  test_heir_top.json  test_json.json  test_regdef.py  test_sim.py  test_validate.py  test_verilog.py  test_vhdl.py
test/verilog_test/: test_verilog.py
test/vhdl_test/: test_vhdl.py
